force-app/main/default/objects/clofor_com_cfs__TRSBuying__c/fields/clofor_com_cfs__BankAccountforPayment__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BankAccountforPayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account for Payment</label>
    <referenceTo>clofor_com_cfs__BankAccount__c</referenceTo>
    <relationshipLabel>TRS Buying</relationshipLabel>
    <relationshipName>TRSBuyingBank</relationshipName>
    <type>Lookup</type>
</CustomField>