force-app/main/default/objects/clofor_com_cfs__TRSBuying__c/fields/clofor_com_cfs__BeneficiaryContact__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BeneficiaryContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Choose the actual Contact you TRF money to (if have).</inlineHelpText>
    <label>Beneficiary-Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TRS Buying</relationshipLabel>
    <relationshipName>TRSBuyingContact</relationshipName>
    <type>Lookup</type>
</CustomField>