force-app/main/default/objects/clofor_com_cfs__TRSBuying__c/fields/clofor_com_cfs__Chargequantity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Chargequantity__c</fullName>
    <label>Charge quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>