force-app/main/default/objects/clofor_com_cfs__TRSBuying__c/fields/clofor_com_cfs__ContainerInformation__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContainerInformation__c</fullName>
    <label>Container Information</label>
    <type>TextArea</type>
</CustomField>