force-app/main/default/objects/clofor_com_cfs__TRSBuying__c/fields/clofor_com_cfs__GOODSSALESORDER__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GOODSSALESORDER__c</fullName>
    <label>GOODS SALES ORDER</label>
    <referenceTo>clofor_com_cfs__SALES_ORDER__c</referenceTo>
    <relationshipLabel>TRS Buying</relationshipLabel>
    <relationshipName>TRSBuyingGoodSO</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>