force-app/main/default/objects/clofor_com_cfs__TRSBuying__c/fields/clofor_com_cfs__LiftOffCost__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LiftOffCost__c</fullName>
    <inlineHelpText>This Cost include VAT already (Pay on behalf).</inlineHelpText>
    <label>Lift Off Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>