force-app/main/default/objects/clofor_com_cfs__TRSBuying__c/fields/clofor_com_cfs__PaymentConfirmedBuying__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaymentConfirmedBuying__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box if you paid full to your vendor.</inlineHelpText>
    <label>Payment Confirmed-Buying</label>
    <type>Checkbox</type>
</CustomField>