force-app/main/default/objects/clofor_com_cfs__TRSBuying__c/fields/clofor_com_cfs__PaymentNotesBuying__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaymentNotesBuying__c</fullName>
    <label>Payment Notes-Buying</label>
    <type>TextArea</type>
</CustomField>