force-app/main/default/objects/clofor_com_cfs__TRSBuying__c/fields/clofor_com_cfs__Paymentto__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Paymentto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Input Vendor/Supplier Name who you buy this service from.</inlineHelpText>
    <label>Payment to</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TRS Buying</relationshipLabel>
    <relationshipName>TRSBuyingvendor</relationshipName>
    <type>Lookup</type>
</CustomField>