force-app/main/default/objects/clofor_com_cfs__TRSBuying__c/fields/clofor_com_cfs__PaymentTypeBuying__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaymentTypeBuying__c</fullName>
    <label>Payment Type-Buying</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ReceiptancePaymentType</valueSetName>
    </valueSet>
</CustomField>