force-app/main/default/objects/clofor_com_cfs__TRSBuying__c/fields/clofor_com_cfs__Service__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>clofor_com_cfs__TariffMaster__c</referenceTo>
    <relationshipLabel>TRS Buying</relationshipLabel>
    <relationshipName>TRSBuyingService</relationshipName>
    <type>Lookup</type>
</CustomField>