force-app/main/default/objects/clofor_com_cfs__TRSBuying__c/fields/clofor_com_cfs__Taxratebuying__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Taxratebuying__c</fullName>
    <label>Tax rate-buying</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>