force-app/main/default/objects/clofor_com_cfs__TRSBuying__c/fields/clofor_com_cfs__TotalTruckingCostinclVATfor__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalTruckingCostinclVATfor__c</fullName>
    <formula>clofor_com_cfs__TruckingCost__c  +  clofor_com_cfs__TruckingCost__c  *  clofor_com_cfs__Chargequantity__c  *  clofor_com_cfs__Taxratebuying__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Trucking Cost(incl VAT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>