force-app/main/default/objects/clofor_com_cfs__TRSBuying__c/fields/clofor_com_cfs__TransportationRoute__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TransportationRoute__c</fullName>
    <label>Transportation Route</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trảng Bom-Cát Lái</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>