force-app/main/default/objects/clofor_com_cfs__TRSBuying__c/fields/clofor_com_cfs__UnpaidBalanceofBuying__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnpaidBalanceofBuying__c</fullName>
    <formula>clofor_com_cfs__AmountBuyinginclTaxfor__c    -  clofor_com_cfs__AmountPaidBuyingLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Balance of Buying</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>