force-app/main/default/objects/clofor_com_cfs__TRSBuying__c/recordTypes/clofor_com_cfs__BuyingDocuments.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__BuyingDocuments</fullName>
    <active>true</active>
    <label>Buying-Documents</label>
</RecordType>