force-app/main/default/objects/clofor_com_cfs__TRSBuying__c/recordTypes/clofor_com_cfs__BuyingOthers.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__BuyingOthers</fullName>
    <active>true</active>
    <label>Buying-Others</label>
</RecordType>