force-app/main/default/objects/clofor_com_cfs__TRSBuying__c/recordTypes/clofor_com_cfs__BuyingPurchasing.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__BuyingPurchasing</fullName>
    <active>true</active>
    <label>Buying-Purchasing</label>
</RecordType>