force-app/main/default/objects/clofor_com_cfs__TRSBuying__c/listViews/clofor_com_cfs__UpdateAPPurchasingExpense.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__UpdateAPPurchasingExpense</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Service__c</columns>
    <columns>clofor_com_cfs__Paymentto__c</columns>
    <columns>clofor_com_cfs__Chargequantity__c</columns>
    <columns>clofor_com_cfs__ChargeUnit__c</columns>
    <columns>clofor_com_cfs__LiftOnCost__c</columns>
    <columns>clofor_com_cfs__LiftOffCost__c</columns>
    <columns>clofor_com_cfs__TruckingCost__c</columns>
    <columns>clofor_com_cfs__AmountBuyinginclTaxfor__c</columns>
    <columns>clofor_com_cfs__PaymentConfirmedBuying__c</columns>
    <columns>clofor_com_cfs__AmountPaidBuyingLocal__c</columns>
    <columns>clofor_com_cfs__UnpaidBalanceofBuying__c</columns>
    <columns>clofor_com_cfs__PaymentSettledDateBuying__c</columns>
    <columns>clofor_com_cfs__PaymentTypeBuying__c</columns>
    <columns>clofor_com_cfs__PaymentNotesBuying__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>clofor_com_cfs__TRSBuying__c.clofor_com_cfs__BuyingPurchasing</value>
    </filters>
    <label>2. Update AP-Purchasing Expense</label>
</ListView>